Mejoras en creacion de equipo
