# backend/docs/swagger.json
@@ -86,6 +86,9 @@
 					"empresaId": {
 						"type": "number",
 						"format": "double"
+					},
+					"perfilCompleto": {
+						"type": "boolean"
 					}
 				},
 				"required": [
@@ -176,6 +179,9 @@
 					"empresaId": {
 						"type": "number",
 						"format": "double"
+					},
+					"perfilCompleto": {
+						"type": "boolean"
 					}
 				},
 				"type": "object",
@@ -320,6 +326,9 @@
 					"empresaId": {
 						"type": "number",
 						"format": "double"
+					},
+					"perfilCompleto": {
+						"type": "boolean"
 					}
 				},
 				"required": [
@@ -375,6 +384,9 @@
 					"empresaId": {
 						"type": "number",
 						"format": "double"
+					},
+					"perfilCompleto": {
+						"type": "boolean"
 					}
 				},
 				"type": "object",
@@ -1164,6 +1176,9 @@
 													"type": "number",
 													"format": "double"
 												},
+												"perfilCompleto": {
+													"type": "boolean"
+												},
 												"empresaId": {
 													"type": "number",
 													"format": "double"
@@ -1213,6 +1228,7 @@
 												"updatedAt",
 												"createdAt",
 												"idUsuario",
+												"perfilCompleto",
 												"empresaId",
 												"estado",
 												"rolEquipo",
@@ -1295,6 +1311,9 @@
 														"type": "number",
 														"format": "double"
 													},
+													"perfilCompleto": {
+														"type": "boolean"
+													},
 													"empresaId": {
 														"type": "number",
 														"format": "double"
@@ -1344,6 +1363,7 @@
 													"updatedAt",
 													"createdAt",
 													"idUsuario",
+													"perfilCompleto",
 													"empresaId",
 													"estado",
 													"rolEquipo",
@@ -1420,6 +1440,9 @@
 														"type": "number",
 														"format": "double"
 													},
+													"perfilCompleto": {
+														"type": "boolean"
+													},
 													"empresaId": {
 														"type": "number",
 														"format": "double"
@@ -1469,6 +1492,7 @@
 													"updatedAt",
 													"createdAt",
 													"idUsuario",
+													"perfilCompleto",
 													"empresaId",
 													"estado",
 													"rolEquipo",
@@ -1574,6 +1598,9 @@
 													"type": "number",
 													"format": "double"
 												},
+												"perfilCompleto": {
+													"type": "boolean"
+												},
 												"empresaId": {
 													"type": "number",
 													"format": "double"
@@ -1623,6 +1650,7 @@
 												"updatedAt",
 												"createdAt",
 												"idUsuario",
+												"perfilCompleto",
 												"empresaId",
 												"estado",
 												"rolEquipo",
@@ -1704,6 +1732,9 @@
 													"type": "number",
 													"format": "double"
 												},
+												"perfilCompleto": {
+													"type": "boolean"
+												},
 												"empresaId": {
 													"type": "number",
 													"format": "double"
@@ -1753,6 +1784,7 @@
 												"updatedAt",
 												"createdAt",
 												"idUsuario",
+												"perfilCompleto",
 												"empresaId",
 												"estado",
 												"rolEquipo",
@@ -1844,6 +1876,9 @@
 													"type": "number",
 													"format": "double"
 												},
+												"perfilCompleto": {
+													"type": "boolean"
+												},
 												"empresaId": {
 													"type": "number",
 													"format": "double"
@@ -1893,6 +1928,7 @@
 												"updatedAt",
 												"createdAt",
 												"idUsuario",
+												"perfilCompleto",
 												"empresaId",
 												"estado",
 												"rolEquipo",
