# backend/src/models/EquipoDTO.ts
@@ -1,12 +1,13 @@
 export interface EquipoDTO {
-    username: string;
-    correo: string;
-    password: string;
-    nombreCompleto: string;
-    telefono: string;
-    direccion: string;
-    fotoPerfil?: string; // Opcional: la empresa puede no subirla de una vez
-    rolEquipo: "LECTOR" | "COMENTARISTA" | "EDITOR";
-    estado?: "activo" | "inactivo";
-    empresaId?: number;  
+  username: string;
+  correo: string;
+  password: string;
+  nombreCompleto: string;
+  telefono: string;
+  direccion: string;
+  fotoPerfil?: string;
+  rolEquipo: "LECTOR" | "COMENTARISTA" | "EDITOR";
+  estado?: "activo" | "inactivo";
+  empresaId?: number;
+  perfilCompleto?: boolean; // 👈 también aquí como opcional
 }
